--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
 
     <div class="section__text">
 
-      <p>Happily married and proud dad to our wonderful daughter. We live in the charming town of
+      <p>Happily married and proud dad to our wonderful daughter and son. We live in the charming town of
         <strong>Norderstedt</strong>, which is located close to Hamburg in 🇩🇪. Spending quality time with my loved
         ones is what I enjoy the most, but whenever I get some free time, I like to tinker with <strong>smart home</strong> stuff or <strong>play some games</strong> to unwind and have some fun.
       </p>
