refactor: move inline scripts to external JS file
- Remove inline document.write() calls from HTML
- Replace with semantic span elements with IDs
- Add updateYearsOfExperience() function to calculate years dynamically
- Add updateCopyrightYear() function to update footer year
- Improves Content Security Policy compatibility
- Separates content from presentation logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
     <div class="header-text">
       <h1 class="headline" id="hello">hello</h1>
       <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over
-        <script>document.write(new Date().getFullYear() - 2008)</script> years of experience, I’m currently serving as
+        <span id="years-of-experience">18</span> years of experience, I'm currently serving as
         the <strong class="no-br"><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead
         the development of cutting-edge <strong>e-commerce</strong> and <strong>platform solutions</strong> for our
         clients.
