feat: improve accessibility with semantic HTML and ARIA labels
- Add descriptive alt text to all social media icons
- Add role="navigation" and aria-label to nav elements
- Improve screen reader experience with meaningful labels
- Distinguish between page navigation and social links with specific aria-labels

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
       </p>
     </div>
 
-    <nav class="px-2">
+    <nav class="px-2" role="navigation" aria-label="Page sections">
       <p class="px">Continue reading about my …</p>
       <ul>
         <li>💪 <a href="#professional-focus">Professional Focus</a></li>
@@ -116,10 +116,10 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
       <li>digitalnative</li>
     </ul>
 
-    <nav class="social-links">
+    <nav class="social-links" aria-label="Professional contact links">
       <ul>
-        <li><a href="https://www.linkedin.com/in/hellovolker/"><img src="https://volkerotto.net/assets/img/linkedin.png" alt="" loading="lazy"> LinkedIn</a></li>
-        <li><a href="mailto:volker.otto@digital-masters.de"><img src="https://volkerotto.net/assets/img/email.png" alt="" loading="lazy"> E-Mail</a></li>
+        <li><a href="https://www.linkedin.com/in/hellovolker/"><img src="https://volkerotto.net/assets/img/linkedin.png" alt="LinkedIn icon" loading="lazy"> LinkedIn</a></li>
+        <li><a href="mailto:volker.otto@digital-masters.de"><img src="https://volkerotto.net/assets/img/email.png" alt="Email icon" loading="lazy"> E-Mail</a></li>
       </ul>
     </nav>
     <div class="section__bg section__bg--lightgrey"></div>
@@ -147,12 +147,12 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
       <li>gaming</li>
     </ul>
 
-    <nav class="social-links">
+    <nav class="social-links" aria-label="Personal social media links">
       <ul>
-        <li><a href="https://mastodon.social/@l4ci" rel="me"><img src="https://volkerotto.net/assets/img/mastodon.png" alt="@l4ci@mastodon.social" loading="lazy"> Mastodon</a></li>
-        <li><a href="https://www.instagram.com/chirpysnail/"><img src="https://volkerotto.net/assets/img/instagram.png" alt="" loading="lazy"> Instagram</a></li>
-        <li><a href="https://steamcommunity.com/id/l4ci/"><img src="https://volkerotto.net/assets/img/steam.png" alt="" loading="lazy"> Steam</a></li>
-        <li><a href="https://www.chess.com/member/l4ci"><img src="https://volkerotto.net/assets/img/chess.png" alt="" loading="lazy"> Chess</a></li>
+        <li><a href="https://mastodon.social/@l4ci" rel="me"><img src="https://volkerotto.net/assets/img/mastodon.png" alt="Mastodon icon" loading="lazy"> Mastodon</a></li>
+        <li><a href="https://www.instagram.com/chirpysnail/"><img src="https://volkerotto.net/assets/img/instagram.png" alt="Instagram icon" loading="lazy"> Instagram</a></li>
+        <li><a href="https://steamcommunity.com/id/l4ci/"><img src="https://volkerotto.net/assets/img/steam.png" alt="Steam icon" loading="lazy"> Steam</a></li>
+        <li><a href="https://www.chess.com/member/l4ci"><img src="https://volkerotto.net/assets/img/chess.png" alt="Chess.com icon" loading="lazy"> Chess</a></li>
       </ul>
     </nav>
     <div class="section__bg section__bg--blue"></div>
