--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
 <header class="header">
   <div class="container container-big">
     <div class="header-text">
-      <h1 class="headline" id="hello">hello</h1>
-      <p>My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over
+      <h1 class="headline fade-in" id="hello">hello</h1>
+      <p class="fade-in-delay-1">My name is <strong>Volker Otto</strong> and as a <strong>web industry professional</strong> with over
         <span id="years-of-experience">18</span> years of experience, I'm currently serving as
         the <strong class="no-br"><a href="https://digital-masters.de">CTO @ Digital Masters</a></strong>, where I lead
         the development of cutting-edge <strong>e-commerce</strong> and <strong>platform solutions</strong> for our
@@ -16,7 +16,7 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
       </p>
     </div>
 
-    <nav class="px-2" role="navigation" aria-label="Page sections">
+    <nav class="px-2 fade-in-delay-2" role="navigation" aria-label="Page sections">
       <p class="px">Continue reading about my …</p>
       <ul>
         <li>💪 <a href="#professional-focus">Professional Focus</a></li>
@@ -93,11 +93,11 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
 
 <section class="section" id="professional-focus">
   <div class="container">
-    <h2 class="section__label">
+    <h2 class="section__label fade-in-delay-1">
       💪 Professional Focus
     </h2>
 
-    <div class="section__text">
+    <div class="section__text fade-in-delay-2">
       <p>My focus is always on ensuring <strong>scalability</strong>, streamlining <strong>digital processes</strong>
         and taking a <strong>customer-centric</strong> approach. I am also committed to <strong>driving growth</strong>
         and <strong>continuous improvement</strong> within our agency, as we strive to make our mark in the industry.
@@ -128,11 +128,11 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
 
 <section class="section" id="personal-life">
   <div class="container">
-    <h2 class="section__label">
+    <h2 class="section__label fade-in-delay-1">
       👨‍👩‍👧 Personal Life
     </h2>
 
-    <div class="section__text">
+    <div class="section__text fade-in-delay-2">
 
       <p>Happily married and proud dad to our wonderful daughter and son. We live in the charming town of
         <strong>Norderstedt</strong>, which is located close to Hamburg in 🇩🇪. Spending quality time with my loved
@@ -161,10 +161,10 @@ desc: Volker Otto – CTO, softwarearchitect & tech enthusiast. Focusing on digi
 
 <section class="section" id="cv">
   <div class="container">
-    <h2 class="section__label">
+    <h2 class="section__label fade-in-delay-1">
       🎓 CV
     </h2>
-    <div class="section__text">
+    <div class="section__text fade-in-delay-2">
       <h3 class="section__subline">Work experience</h3>
 
       <dl>
